crates/strider-analyze/tests/snapshots/v3__mips32le__patterns__loop_with_invariant_load.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "13" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "16" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "16" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="φ v1", shape=house, fillcolor="#163030"];
  "11" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ v0", shape=house, fillcolor="#163030"];
  "11" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
