crates/strider-analyze/tests/snapshots/v3__mips32le__patterns__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400760:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x40076c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v11" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x400794:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v18" [color="#888888", style=dashed];
  "v18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4007a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v24" [color="#888888", style=dashed];
  "v24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x4007dc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v37" [color="#888888", style=dashed];
  "v37" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "42" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "38" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "44" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "45" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "45" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "19" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "51" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "52" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "55" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v59" [color="#888888", style=dashed];
  "v59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "55" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "13" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "60" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "61" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v65" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v65" [color="#888888", style=dashed];
  "v65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "61" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "66" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "67" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v71" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v71" [color="#888888", style=dashed];
  "v71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "67" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "70" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "72" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "73" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "76" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "79" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "79" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
